--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -2,14 +2,14 @@
 # to provide dependencies and expose ports for local testing
 
 services:
-  ffc-template-node:
+  ffc-techspike-customer-registry-eligibility:
     build:
       target: development
-    image: ffc-template-node-development
-    container_name: ffc-template-node-development
+    image: ffc-techspike-customer-registry-eligibility-development
+    container_name: ffc-techspike-customer-registry-eligibility-development
     ports:
-      - "3000:3000"
-      - "9229:9229"
+      - "4005:3000"
+      - "9245:9229"
     volumes:
       - ./app:/home/node/app
       - ./package.json:/home/node/package.json
