--- a/docker-compose.test.debug.yaml
+++ b/docker-compose.test.debug.yaml
@@ -1,5 +1,5 @@
 services:
-  ffc-template-node:
+  ffc-techspike-customer-registry-eligibility:
     command: npm run test:debug
     ports:
       - "9229:9229"
