--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,16 @@
 services:
-  ffc-template-node:
+  ffc-techspike-customer-registry-eligibility:
     build:
       context: .
       target: production
-    image: ffc-template-node
-    container_name: ffc-template-node
+    image: ffc-techspike-customer-registry-eligibility
+    container_name: ffc-techspike-customer-registry-eligibility
     environment:
-      APPINSIGHTS_CLOUDROLE: ffc-template-node-local
+      APPINSIGHTS_CLOUDROLE: ffc-techspike-customer-registry-eligibility-local
       APPINSIGHTS_INSTRUMENTATIONKEY: ${APPINSIGHTS_INSTRUMENTATIONKEY}
+      ELIGIBILITYREQUEST_QUEUE_ADDRESS: ${ELIGIBILITYREQUEST_QUEUE_ADDRESS:-ffc-techspike-customer-registry-eligibility}${MESSAGE_QUEUE_SUFFIX}
+      CUSTOMERREGISTRYREQUEST_QUEUE_ADDRESS: ${CUSTOMERREGISTRYREQUEST_QUEUE_ADDRESS:-ffc-techspike-customer-registry-request}${MESSAGE_QUEUE_SUFFIX}
+      MESSAGE_QUEUE_HOST: ${MESSAGE_QUEUE_HOST}
+      MESSAGE_QUEUE_PASSWORD: ${MESSAGE_QUEUE_PASSWORD}
+      MESSAGE_QUEUE_USER: ${MESSAGE_QUEUE_USER}
+      LAND_ENDPOINT: ${LAND_ENDPOINT:- https://environment.data.gov.uk/arcgis/rest/services/RPA/}
